# ctap-keyring-device

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: CD-pre-release.yml  CD.yml  CI.yml
ctap_keyring_device/: ctap_credential_maker.py  ctap_keyring_device.py  ctap_private_key_wrapper.py  ctap_strucs.py  ctap_user_verifiers.py  touch_id_helpers.py  windows_hello_helpers.py
ctap_keyring_device/user_verifiers/: ctap_user_verifier.py  ctap_user_verifier_factory.py  noop_ctap_user_verifier.py  touch_id_ctap_user_verifier.py  windows_hello_ctap_user_verifier.py
docs/: conf.py  get-assertion-flow.mermaid  index.rst  make-credential-flow.mermaid  requirements.txt
tests/: test_ctap_get_assertion_request.py  test_ctap_get_next_assertion_context.py  test_ctap_keyring_device.py  test_ctap_make_credential_request.py  test_noop_ctap_user_verifier.py
