[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = ctap-keyring-device
author = Danny Shemesh
author_email = dany74q@gmail.com
description = CTAP (client-to-authenticator-protocol) device backed by python's keyring library
long_description = file:README.rst
url = https://github.com/dany74q/ctap-keyring-device
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    pyobjc >= 6.2.2; platform_system=='Darwin'
    winrt >= 1.0.19128.1; platform_system == 'Windows' and (python_version >= '3.7' or python_version < '3.9')
    cryptography >= 3.1.1
    keyring >= 21.4.0
    fido2 >= 0.8.1
setup_requires = setuptools_scm >= 4.1.2

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    pytest >= 6.0.1
    pytest-flake8 >= 1.0.6
    pytest-black >= 0.3.11
    pytest-cov >= 2.10.1

docs =
    sphinx >= 3.2.1
    jaraco.packaging >= 3.2
    rst.linker >= 2.0.0
    sphinx-autoapi >= 1.5.1
